# qs-calculator

./: README.md  UI-THEME.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BgCanvas.tsx  Calculator.tsx  GlassPanel.tsx  PanelLight.tsx  Titlebar.tsx
src/store/: calculatorStore.ts
src/utils/: canvas-bg.ts
