[package]
name = "qs-calculator"
version = "0.1.0"
edition = "2021"
description = "QS 计算器 - A dark glassmorphism calculator"
authors = []

[package.metadata]
docs = []

[lib]
name = "qs_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
